@@ -7,7 +7,23 @@ plugins {
 
 group = 'com.photoapp'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
+
+compileJava {
+    options.compilerArgs += [
+        '--enable-preview',
+        '--enable-native-access=ALL-UNNAMED',
+        '-parameters'
+    ]
+}
+
+test {
+    jvmArgs = ['--enable-preview']
+}
 
 repositories {
     mavenCentral()
@@ -18,4 +34,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+tasks.named('bootRun') {
+    jvmArgs = ['--enable-preview']
 }
